cielo3/src/main/java/ada/tech/cielo2/infra/resources/security_group/main.tf
resource "aws_security_group" "my_sg" {
  name        = var.name
  description = "My Security Group"
  vpc_id      = var.vpc_id
  
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  
  # You can define eress rules here as well
}
